fr/15.3/admin/storage-guide.rst
=========
Stockage
=========

Présentation
============

La page Stockage permet de gérer les fichiers sur MinIO, un stockage d'objets compatible Amazon S3.

Gestion
=======

Configuration du serveur de stockage d'objets
----------------------------------------------

Ouvrez la configuration du stockage depuis [Système > Général] et configurez les éléments suivants :

- Point de terminaison : URL du point de terminaison du serveur de stockage
- Clé d'accès : Clé d'accès du serveur de stockage
- Clé secrète : Clé secrète du serveur de stockage
- Bucket : Nom du bucket à gérer


Affichage
---------

Pour ouvrir la page de liste d'objets illustrée ci-dessous, cliquez sur [Système > Stockage] dans le menu de gauche.

|image0|


Nom
::::

Nom de fichier de l'objet


Taille
::::::

Taille de l'objet


Date de dernière modification
::::::::::::::::::::::::::::::

Date de dernière modification de l'objet

Téléchargement
--------------

Vous pouvez télécharger un objet en cliquant sur le bouton Télécharger.


Suppression
-----------

Vous pouvez supprimer un objet en cliquant sur le bouton Supprimer.


Téléversement
-------------

Vous pouvez ouvrir la fenêtre de téléversement de fichier en cliquant sur le bouton Téléverser le fichier en haut à droite.


Création de dossier
-------------------

Vous pouvez ouvrir la fenêtre de création de dossier en cliquant sur le bouton Créer le dossier à droite de l'affichage du chemin. Notez que vous ne pouvez pas créer de dossiers vides.


.. |image0| image:: ../../../resources/images/en/15.3/admin/storage-1.png
